--- a/SimpleFileServer/SimpleFileServer.csproj
+++ b/SimpleFileServer/SimpleFileServer.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,6 +66,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Constants.cs" />
+    <Compile Include="Tools\DiskHelper.cs" />
+    <Compile Include="Tools\GlobalConfig.cs" />
     <Compile Include="Tools\LogHelper.cs" />
   </ItemGroup>
   <ItemGroup>
