--- a/SimpleFileServer/packages.config
+++ b/SimpleFileServer/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Nancy" version="1.4.1" targetFramework="net46" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net46" />
+  <package id="Nancy.Viewengines.Spark" version="1.4.1" targetFramework="net46" />
+  <package id="Spark" version="1.7.0.0" targetFramework="net46" />
 </packages>
